@@ -58,6 +58,11 @@ us a note on ns-developers mailing list.</p>
   </li>
   <li> A new TraceSource has been added to TCP sockets: SlowStartThreshold.
   </li>
+  <li> New method CommmandLine::AddValue (name, attibutePath) to provide a
+       shorthand argument "name" for the Attribute "path".  This also has
+       the effect of including the help string for the Attribute in the
+       Usage message.
+  </li>
 </ul>
 
 <h2>Changes to existing API:</h2>
